# comixzone

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  run.bat  run_test.bat
config/: comixzone.toml  comixzone_config.toml  comixzone_rexglue.toml  switch_tables.toml
docs/: binary-analysis.md  recomp-progress.md
src/: keyboard_driver.cpp  keyboard_driver.h  main.cpp  stubs.cpp  test_boot.cpp
tools/: analyze_pdata.py  extract_comixzone.py  extract_xex.py
